--- a/empowermart/render.yaml
+++ b/empowermart/render.yaml
@@ -2,12 +2,14 @@ services:
   - type: web
     name: empowermart
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install -r requirements.txt
+      python manage.py collectstatic --noinput
     startCommand: gunicorn empowermart.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: empowermart.settings
       - key: SECRET_KEY
-        value: 'django-insecure-mlq!*cjt%%87prm!@@g-z%l&a92_eskaer$meqh=w@0_q$35+x'
+        value: your-very-secret-key
       - key: DEBUG
         value: False
